[package]
name = "buzzing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harfbuzz_rs = {git = "https://github.com/harfbuzz/harfbuzz_rs.git" , rev = "b3c92bf" }
# ab_glyph = "0.2.23"
# image = { version = "0.24.7", default-features = false, features = [
#     "png",
#     "jpeg_rayon",
# ] }
# imageproc = "0.23"
# directories = "5.0"
